--- a/src/main/webapp/css/WeiXinBackstage/main.css
+++ b/src/main/webapp/css/WeiXinBackstage/main.css
@@ -15,6 +15,10 @@ ul,li{
     list-style: none;
 }
 
+body{
+    background-image: url("../../images/index_jsp/index_background.jpg");
+    background-size: cover;
+}
 
 div.container{
     text-align: center;
@@ -37,6 +41,7 @@ div.container ul > li{
     font-size: 20px;
     font-weight: bolder;
     transition: all 2s;
+    opacity: 0.7;
 }
 
 div.container ul > li:hover{
