微信公众号的后台正在搭建中......

--- a/src/main/webapp/css/WeiXinBackstage/uploadImage.css
+++ b/src/main/webapp/css/WeiXinBackstage/uploadImage.css
@@ -15,6 +15,12 @@ img{
     vertical-align: top;
 }
 
+
+body{
+    background-image: url("../../images/index_jsp/index_background.jpg");
+    background-size: cover;
+}
+
 div.container{
     text-align: center;
 }
